# aBinder

./: .gitignore  LICENSE.md  README.md  SECURITY.md  aBinder.sln
.github/workflows/: release.yml
client/: CMakeLists.txt
client/src/: main.cpp
client/src/chat/: chatwidget.cpp  chatwidget.h
client/src/login/: loginwindow.cpp  loginwindow.h
client/src/mainapp/: mainwindow.cpp  mainwindow.h
client/src/network/: socketmanager.cpp  socketmanager.h
client/src/resources/: resources.qrc
client/src/resources/styles/: dark_theme.qss  light_theme.qss
server/: aBinder-Server.njsproj  package.json
server/src/: index.ts  server.ts
server/src/config/: database.ts  server.ts
server/src/middleware/: auth.ts
server/src/models/: ChatMessage.ts  Faction.ts  Group.ts  IRCChannel.ts  Overlay.ts  User.ts  index.ts
server/src/routes/: auth.ts
server/src/services/: authService.ts  bindService.ts  chatService.ts  positionService.ts
server/src/socket/: bindHandlers.ts  chatHandlers.ts  positionHandlers.ts
server/src/types/: index.ts
src/: main.ahk  updateFunc.ahk
src/libs/: SocketIO.ahk
